--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -2,15 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Vibur" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
-<body>
+<body style="background-color: #ffff9f">
+
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Kaushan Script', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+	
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Grand Hotel', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+	
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Vibur', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  	  <ul class="navbar-nav">
+		
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+	
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Lily Script One', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+	
+	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
+	  <!-- Brand/logo -->
+	  <a class="navbar-brand" style="font-family: 'Poor Story', cursive;" href="#">todo</a>
+	  
+	  <!-- Links 
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'home' %}">Home</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'date' %}">Date</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
+		</li>
+	  </ul>
+	  -->
+	</nav>
+
+<!--
 	<h1>My Site</h1>
 	<a href="{% url 'home' %}">Home</a> /
 	<a href="{% url 'date' %}">Date</a> /
 	<a href="{% url 'blackhole' %}">See the hole</a>
 	<hr>
+-->
 	{% block content %}
 	{% endblock %}
+
 </body>
 </html>
