--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -19,7 +19,7 @@
 
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Kaushan Script', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Kaushan Script', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  <ul class="navbar-nav">
@@ -38,7 +38,7 @@
 	
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Grand Hotel', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Grand Hotel', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  <ul class="navbar-nav">
@@ -57,7 +57,7 @@
 	
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Vibur', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Vibur', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  <ul class="navbar-nav">
@@ -76,7 +76,7 @@
 
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  	  <ul class="navbar-nav">
@@ -96,7 +96,7 @@
 	
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Lily Script One', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Lily Script One', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  <ul class="navbar-nav">
@@ -115,7 +115,7 @@
 	
 	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
 	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Poor Story', cursive;" href="#">todo</a>
+	  <a class="navbar-brand" style="font-family: 'Poor Story', cursive;" href="#">todue</a>
 	  
 	  <!-- Links 
 	  <ul class="navbar-nav">
