--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<h2></h2>
-	<p></p>
+
+	<div class="row" style="padding-top: 65px;">
+		<div class="col"></div>
+		<div class="col">
+			<h2>Home</h2>
+			<p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis maximus libero at laoreet. In vehicula, lectus vel dignissim finibus, neque eros aliquam velit, non.</small></p>
+		</div>
+		<div class="col"></div>
+	</div>
 		
 {% endblock %}
