--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Vibur" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -17,130 +18,91 @@
 </head>
 <body style="background-color: #ffff9f">
 
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Kaushan Script', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
-	
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Grand Hotel', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
-	
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Vibur', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
+		<nav class="navbar navbar-expand-lg navbar-light fixed-top style="background-color: #ffff99;"" role="navigation">
+			<div class="container">
+				<a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">todue</a>
+				<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+					&#9776;
+				</button>
+				
+				<div class="collapse navbar-collapse" id="exCollapsingNavbar">
+				
+					<ul class="nav navbar-nav" style="font-family: 'Roboto', sans-serif;">
+						<li class="nav-item"><a href="{% url 'blackhole' %}" class="nav-link"><small>About</small></a></li>
+						<li class="nav-item"><a href="{% url 'home' %}" class="nav-link"><small>Home</small></a></li>
+						<li class="nav-item"><a href="#" class="nav-link"><small>Service</small></a></li>
+						<li class="nav-item"><a href="#" class="nav-link"><small>More</small></a></li>
+					</ul>
+					
+					<ul class="nav navbar-nav flex-row justify-content-between ml-auto">
+						<li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
+						<li class="dropdown order-1">
+							<a href="#" class="nav-link" id="dropdownMenu1" data-toggle="dropdown" class="dropdown-toggle" style="font-family: 'Roboto', sans-serif;">Login</a>
+							<ul class="dropdown-menu dropdown-menu-right mt-2" style="background-color: #ffffaf;">
+							   <li class="px-3 py-2">
+								   <form class="form" role="form">
+										<div class="form-group">
+											<input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
+										</div>
+										<div class="form-group">
+											<input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
+										</div>
+										<div class="form-group text-center">
+											<small><a href="#" data-toggle="modal" data-target="#modalPassword"><small>Forgot password?</small></a></small>
+										</div>
+										<div class="form-group">
+											<button type="submit" class="btn btn-primary btn-block"><emphasize><small>Login</small></emphasize></button>
+										</div>
+									</form>
+								</li>
+							</ul>
+						</li>
+					</ul>
+					
+				</div>
+			</div>
+		</nav>
 
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  	  <ul class="navbar-nav">
+		<div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content" style="background-color: #ffffaf;">
+					<div class="modal-header">
+						<h3>Forgot password</h3>
+						<button type="button" class="close font-weight-light" data-dismiss="modal" aria-hidden="true">×</button>
+					</div>
+					<div class="modal-body">
+						<p>Reset your password..</p>
+					</div>
+					<div class="modal-footer">
+						<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+						<button class="btn btn-primary">Save changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script>
+		$(document).ready(function(){
+		  $('[data-toggle="popover"]').popover();   
+		});
+		</script>
 		
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
+		</nav>
 	
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Lily Script One', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
-	
-	<nav class="navbar navbar-expand-sm navbar-light justify-content-center" style="background-color: #ffff99;">
-	  <!-- Brand/logo -->
-	  <a class="navbar-brand" style="font-family: 'Poor Story', cursive;" href="#">todue</a>
-	  
-	  <!-- Links 
-	  <ul class="navbar-nav">
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'home' %}">Home</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'date' %}">Date</a>
-		</li>
-		<li class="nav-item">
-		  <a class="nav-link" href="{% url 'blackhole' %}">Hole</a>
-		</li>
-	  </ul>
-	  -->
-	</nav>
 
-<!--
-	<h1>My Site</h1>
-	<a href="{% url 'home' %}">Home</a> /
-	<a href="{% url 'date' %}">Date</a> /
-	<a href="{% url 'blackhole' %}">See the hole</a>
-	<hr>
--->
-	{% block content %}
-	{% endblock %}
 
-</body>
+	<!--
+		<h1>My Site</h1>
+		<a href="{% url 'home' %}">Home</a> /
+		<a href="{% url 'date' %}">Date</a> /
+		<a href="{% url 'blackhole' %}">See the hole</a>
+		<hr>
+	-->
+		
+		{% block content %}
+		
+		
+		{% endblock %}
+
+	</body>
 </html>
